--- a/index.html
+++ b/index.html
@@ -96,8 +96,8 @@
 						<div class="col-lg-6 col-md-7 col-12">
 							<!-- Top Contact -->
 							<ul class="top-contact">
-								<li><i class="fa fa-phone"></i>+880 1234 56789</li>
-								<li><i class="fa fa-envelope"></i><a href="mailto:support@yourmail.com">support@yourmail.com</a></li>
+								<li><i class="fa fa-phone"></i>+91 12345 67890</li>
+								<li><i class="fa fa-envelope"></i><a href="mailto:support@yourmail.com">info@cdmi.in</a></li>
 							</ul>
 							<!-- End Top Contact -->
 						</div>
